@@ -1,3 +1,10 @@
+2020-01-13  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/utils.cpp (makeOption): Update from now-deprecated
+	FDEuropeanEngine to FdBlackScholesVanillaEngine
+	(getCallabilitySchedule): Update from now-deprecated
+	Callability::Price to Bond::Price
+
 2019-08-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor release
